# DP_deep_agent

./: .env.example  .gitignore  README.md  README_EN.md  UCP_WORKFLOW.md  pyproject.toml  run.sh
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: chat-interface.tsx
frontend/components/chat/: ChatHeader.tsx  CheckoutCard.tsx  EmptyState.tsx  MessageItem.tsx  types.ts  utils.ts
frontend/components/ui/: GradientText.css  GradientText.tsx  Iridescence.tsx  input.tsx  shiny-text.tsx
frontend/lib/: ag-ui.ts
shopping_agent/: config.py  exchange_rate.py  shipping.py  ucp.py
shopping_agent/agents/: __init__.py  routing.py  store_agent.py  store_factory.py  stores.py
shopping_agent/api/: __init__.py  app.py  langgraph_agent.py
shopping_agent/patches/: google_genai.py
shopping_agent/tools/: __init__.py  shopping.py  ucp.py
